ghost-blog-deployment/ghost-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost-service
  labels:
    name: ghost-service
spec:
  selector:
    app: ghost
  ports:
  - protocol: TCP
    port: 80
    targetPort: 2368
